# QueueTicket

./: .gitignore  Cargo.toml  README.md
migrations/: 20251127_create_tickets.sql  20251216_stronger_timestamp.sql
src/: main.rs
templates/: admin.html  admin_index.html  call.html  call_items.html  front.html  guest.html  guest_content.html
